[package]
name = "diagnostic"
version = "0.1.0"
authors = ["Jan Schulte <hello@unexpected-co.de>"]

[dependencies]
clap = "2.26.0"
log-ql = { git = "https://github.com/schultyy/log-ql", rev = "1471766e9771330e8024e175bf95dec4645cf3da" }
serde = "1.0.11"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"