[package]
name = "diagnostic"
version = "0.1.0"
authors = ["Jan Schulte <hello@unexpected-co.de>"]

[dependencies]
clap = "2.26.0"
log-ql = { git = "https://github.com/schultyy/log-ql", rev = "e894c91a01049f03b0f3e38eb374b99290b68a19" }
serde = "1.0.11"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"